# COREcare-v2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  docker-compose.yml
api/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml  test.db
api/alembic/: env.py
api/alembic/versions/: 0001_enable_rls_policies.py  0001_initial_schema.py  0002_email_events.py  0003_user_role_client_enum.py  0004_clients_client_user_id.py  0005_message_threads.py  0006_care_plan_versions.py  0007_client_invites.py  0008_client_persona_rls.py  0009_message_recipient_nullable.py
api/app/: auth.py  config.py  db.py  main.py  rbac.py  seed.py  tenant.py
api/app/models/: __init__.py  agency.py  ai.py  audit.py  base.py  billing.py  care_plan.py  caregiver.py  chart.py  client.py  client_invite.py  compliance.py  credential.py  email.py  message_thread.py  notification.py  payroll.py  shift.py  user.py  visit.py
api/app/routers/: ai.py  billing.py  caregivers.py  charts.py  client_invites.py  clients.py  compliance.py  credentials.py  dashboard.py  me.py  notifications.py  payroll.py  shifts.py  users.py
api/app/schemas/: ai.py  billing.py  care_plan.py  caregiver.py  chart.py  client.py  client_invite.py  client_me.py  compliance.py  credential.py  dashboard.py  notification.py  payroll.py  shift.py  user.py  visit.py
api/app/services/: ai.py  audit.py  billing.py  care_plan.py  caregiver.py  chart.py  client.py  client_invite.py  compliance.py  credential.py  dashboard.py  message_thread.py  migration.py  notification.py  payroll.py  shift.py  user.py  visit.py
api/app/tests/: conftest.py  test_ai.py  test_audit.py  test_auth.py  test_billing.py  test_caregivers.py  test_charts.py  test_client_invite.py  test_client_persona.py  test_client_persona_rls.py  test_clients.py  test_config.py  (+16 more)
scripts/coldreader/: README.md  client.py  fixtures.py  inventory.py  pyproject.toml  run.py  runner.py  verifier.py
(+322 files in other folders)
