[project]
name = "coldreader"
version = "0.1.0"
description = "Periodic LLM cold-reader rotation drift detector for v1-pages-inventory.md persona sections"
requires-python = ">=3.12,<3.14"
dependencies = [
    "anthropic>=0.40,<0.50",
    "pyyaml>=6.0,<7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["run.py", "inventory.py", "fixtures.py", "verifier.py", "client.py", "tests"]
